--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>515 Hikaru's Page</title>
+    <title>My Storage</title>
   </head>
   <body>
+    <div>
+      <h1>My Storage</h1>
+    </div>
+    <h1>Social Medias</h1>
     <div id="main">
     </div>
+    
     <script src="./index.js"></script>
   </body>
 </html>
-
